manifests/simple-crud-app-react-nodejs-frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: simple-crud-app-react-nodejs-frontend
  name: simple-crud-app-react-nodejs-frontend
