manifests/simple-crud-app-react-nodejs-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-crud-app-react-nodejs-frontend
  namespace: simple-crud-app-react-nodejs-frontend
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '80'
spec:
  selector: 
    app: simple-crud-app-react-nodejs-frontend
  type: ClusterIP  
  ports:
    - port: 80
      targetPort: 80
