manifests/simple-crud-app-react-nodejs-frontend/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simple-crud-app-react-nodejs-frontend
  namespace: simple-crud-app-react-nodejs-frontend
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`simple-crud-app-react-nodejs-frontend`)
    services:
    - name: simple-crud-app-react-nodejs-frontend
      port: 80
  tls:
    secretName: simple-crud-app-react-nodejs-frontend-tls
